--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Matrix</title>
+  <style>
+    body {
+      background-color: rgb(34, 26, 44);
+    }
+    canvas {
+      position: relative;
+      left: 50%;
+      transform: translate(-50%, 0);
+      width: 80%;
+    }
+  </style>
 </head>
 
 <body>
