--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <script type="module" src="test.js"></script>
+  <script type="module" src="main.js"></script>
   <canvas></canvas>
 </body>
 </html>
