--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
       background-color: rgb(34, 26, 44);
     }
     canvas {
-      position: relative;
+      position: absolute;
       left: 50%;
-      transform: translate(-50%, 0);
+      top: 50%;
+      transform: translate(-50%, -50%);
     }
   </style>
 </head>
 
 <body>
-  <script type="module" src="main.js"></script>
-  <canvas></canvas>
+  <a href="./3D/3D.html">3d</a>
+  <script type="module" src="particle.js"></script>
 </body>
 </html>
