--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Matrix</title>
-  <style>
-    body {
-      background-color: rgb(34, 26, 44);
-    }
-    canvas {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-    }
-  </style>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Matrix JS</title>
+  <script type="module" src="main.js"></script>
 </head>
 
 <body>
-  <a href="./3D/3D.html">3d</a>
-  <script type="module" src="particle.js"></script>
+  Examples
+  <div>
+    <a href="./particles/index.html">Particles</a>
+    <a href="./3D/index.html">3D</a>
+  </div>
 </body>
+
 </html>
