--- a/3D/classVersion/index.html
+++ b/3D/classVersion/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>3D</title>
     <script defer src="main.js" type="module" charset="utf-8"></script>
-    <link rel="stylesheet" href="3D.css"/>
+    <link rel="stylesheet" href="../3D.css"/>
 </head>
 
 <body>
-  <a href="../index.html">back</a>
+  <a href="../../index.html">back</a>
 </body>
 
 </html>
