--- a/classVersion/index.html
+++ b/classVersion/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Matrix JS</title>
-  <script type="module" src="main.js"></script>
+  <title>Document</title>
+  <script type="module" src="test.js"></script>
 </head>
-
 <body>
-  Examples
-  <div>
-    <a href="./particles/index.html">Particles</a>
-    <a href="./3D/objVersion/index.html">3D</a>
-  </div>
+  
 </body>
-
 </html>
