--- a/3D/classVersion/index.html
+++ b/3D/classVersion/index.html
@@ -11,6 +11,8 @@
 
 <body>
   <a href="../../index.html">back</a>
+  <a href="../objVersion/index.html">object version</a>
+  Currently using the class version.
 </body>
 
 </html>
