--- a/3D/objVersion/index.html
+++ b/3D/objVersion/index.html
@@ -11,6 +11,8 @@
 
 <body>
   <a href="../../index.html">back</a>
+  <a href="../classVersion/index.html">class version</a>
+  Currently using the object version.
 </body>
 
 </html>
