--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Matrix JS</title>
-  <script type="module" src="main.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
 </head>
 
 <body>
@@ -14,6 +12,7 @@
   <div>
     <a href="./particles/index.html">Particles</a>
     <a href="./3D/objVersion/index.html">3D</a>
+    <a href="./documentation/index.html">Documentation</a>
   </div>
 </body>
 
