--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="./particles/index.html">Particles</a>
     <a href="./3D/objVersion/index.html">3D</a>
     <a href="./documentation/index.html">Documentation</a>
+    <a href="./controlSystem/index.html">Control system</a>
   </div>
 </body>
 
